# iqAeroMapEditor

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2852ee2  README.md  icons.qrc  iqAeroMapEditor.qbp  iqaeromapeditor.pro  iqameapplication.cpp  iqameapplication.h  iqameatdmenueditdialog.cpp  iqameatdmenueditdialog.h  iqameatdmenueditdialog.ui  iqamegeohelper.cpp  iqamegeohelper.h  iqamegeopoint.cpp  iqamegeopoint.h  iqamegeopointsmodel.cpp  iqamegeopointsmodel.h  iqamegeopointssortfiltermodel.cpp  iqamegeopointssortfiltermodel.h  iqamegeopointstabledelegate.cpp  iqamegeopointstabledelegate.h  iqamegeopointstableview.cpp  iqamegeopointstableview.h  iqamegraphiceditwidget.cpp  iqamegraphiceditwidget.h  iqamegraphiceditwidget.ui  iqamegraphicobject.cpp  iqamegraphicobject.h  iqamelayer.cpp  iqamelayer.h  iqamelayergraphicsitem.cpp  iqamelayergraphicsitem.h  iqameline.cpp  iqameline.h  iqamelineattributes.cpp  iqamelineattributes.h  iqamelinegraphicsitem.cpp  iqamelinegraphicsitem.h  iqamelinesegment.cpp  (+42 more)
Modules/: FindGeographicLib.cmake
